--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -10,7 +10,6 @@
  * ==|== normalize ==========================================================
  */
 
-
 /* =============================================================================
    HTML5 display definitions
    ========================================================================== */
@@ -34,7 +33,7 @@ html { font-size: 100%; overflow-y: scroll; -webkit-text-size-adjust: 100%; -ms-
 
 body { margin: 0; font-size: 13px; line-height: 1.231; }
 
-body, button, input, select, textarea { font-family: sans-serif; color: #222; }
+body, button, input, select, textarea { font-family: geneva; color: #222; }
 
 /* 
  * Remove text-shadow in selection highlight: h5bp.com/i
@@ -289,4 +288,141 @@ td { vertical-align: top; }
   @page { margin: 0.5cm; }
   p, h2, h3 { orphans: 3; widows: 3; }
   h2, h3 { page-break-after: avoid; }
+}
+
+
+body{
+  background-color: #983A30;
+}
+
+#main-container{
+  background-color: #ABB3BC;
+  -moz-box-shadow: 10px 10px 10px 10px #000;
+  -webkit-box-shadow: 10px 10px 10px 10px #000;
+  box-shadow: 10px 10px 10px 10px #000;
+  min-height: 100px;
+}
+#main{
+  background-color: #ABB3BC;
+}
+
+#header-logo{
+    
+}
+
+#logo {
+    display: block;
+    font-family: Arial;
+    height: 49px;
+    margin-left: 10px;
+    color: #fff;
+    font-size: 48px;
+    font-weight: bold;
+    letter-spacing: 2px;
+}
+
+#logo span {
+    color: #fff;
+    font-size: 70%;
+}
+
+#navigation{
+    background-color: #3B3634;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    position: absolute;
+    right: 0;
+    top: 30px;
+    right: 20px;
+    -moz-border-radius-topright: 10px;
+    -moz-border-radius-topleft: 10px;
+    -webkit-border-top-left-radius: 10px;
+    -webkit-border-top-right-radius: 10px;
+    -moz-border-radius-bottomright: 10px;
+    -moz-border-radius-bottomleft: 10px;
+    -webkit-border-bottom-left-radius: 10px;
+    -webkit-border-bottom-right-radius: 10px;
+}
+
+#navigation li{
+  display: inline;
+}
+
+li a{
+  text-decoration: none;
+  color: #fff;
+  font-size: 18px;
+  font-weight: bold;
+  letter-spacing: 1px;
+  padding: 5px;
+}
+
+li a:hover{
+  opacity: .5;
+  color: #fff;
+}
+
+.border{
+  padding-right: 1px;
+  border-right: solid;
+  border-right-width: 1px;
+  color: white;
+}
+
+#user-nav{
+    margin: 0 auto;
+    margin-top: 0px;
+    width: 400px;
+    height: auto;
+    background-color: #3B3634;
+    -moz-box-shadow: 0px 0px 5px 5px #000;
+    -webkit-box-shadow: 0px 0px 5px 5px #000;
+    box-shadow: 0px 0px 5px 5px #000;
+    -moz-border-radius-topright: 10px;
+    -moz-border-radius-topleft: 10px;
+    -webkit-border-top-left-radius: 10px;
+    -webkit-border-top-right-radius: 10px;
+    -moz-border-radius-bottomright: 10px;
+    -moz-border-radius-bottomleft: 10px;
+    -webkit-border-bottom-left-radius: 10px;
+    -webkit-border-bottom-right-radius: 10px;
+}
+
+#user-nav-list{
+    margin: 0 auto;
+    margin-top: 0px;
+    width: 230px;
+}
+
+#user-nav-list a{
+  font-size: 12px;
+}
+
+#user-nav li{
+  display: inline;
+  text-align: center;
+}
+
+#footer-info{
+    list-style: none;
+    float: right;
+}
+
+#footer a{
+  font-size: 8pt;
+  font-weight: normal;
+}
+
+#footer img{
+  float: left;
+}
+
+#footer{
+  padding-top: 10px;
+  background-color: #3B3634;
+  height:5000px;
+  -moz-box-shadow: 10px 10px 10px 10px #000;
+  -webkit-box-shadow: 10px 10px 10px 10px #000;
+  box-shadow: 10px 10px 10px 10px #000;
 }
