--- a/app/views/main.html
+++ b/app/views/main.html
@@ -56,7 +56,7 @@
 	  #{/if}
 	  #{else}
 	  <li class="border">
-              <a href="#">Log in</a>
+              <a href="@{Admin.index()}">Log in</a>
           </li>
           <li>
               <a href="#">Register</a>
