--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -358,6 +358,17 @@ li a{
   padding: 5px;
 }
 
+li a:active{
+  text-decoration: none;
+  color: #fff;
+}
+li a:visited{
+  text-decoration: none;
+  color: #fff;
+}
+
+
+
 li a:hover{
   opacity: .5;
   color: #fff;
@@ -402,6 +413,36 @@ li a:hover{
 #user-nav li{
   display: inline;
   text-align: center;
+}
+
+#user-nav-admin{
+    margin: 0 auto;
+    margin-top: 0px;
+    width: 1000px;
+    height: auto;
+    background-color: #3B3634;
+    -moz-box-shadow: 0px 0px 5px 5px #000;
+    -webkit-box-shadow: 0px 0px 5px 5px #000;
+    box-shadow: 0px 0px 5px 5px #000;
+    -moz-border-radius-topright: 10px;
+    -moz-border-radius-topleft: 10px;
+    -webkit-border-top-left-radius: 10px;
+    -webkit-border-top-right-radius: 10px;
+    -moz-border-radius-bottomright: 10px;
+    -moz-border-radius-bottomleft: 10px;
+    -webkit-border-bottom-left-radius: 10px;
+    -webkit-border-bottom-right-radius: 10px;
+  
+}
+
+#user-nav-admin li{
+  display: inline;
+  text-align: center; 
+}
+#user-nav-admin a{
+  font-size: 10pt;
+  color: white;
+  text-decoration: none;
 }
 
 #footer-info{
